--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,6 @@
-# Serveur Spring Boot
 server.port=${PORT:8080}
+spring.application.name=archivage-ai-backend
 
-# Configuration Ollama distante
-spring.ai.ollama.base-url=${OLLAMA_URL}
-spring.ai.ollama.model=mistral
-spring.ai.ollama.temperature=0.3
+ngrok.url=${ngrok.url}
 
-# (optionnel)
-spring.main.banner-mode=off
 
